@@ -1,3 +1,9 @@
+2017-03-01  Pat Haugen  <pthaugen@us.ibm.com>
+
+	* gcc.target/powerpc/pr79544.c: Add test for vec_vsrad and fix up
+	scan string.
+
+
 2017-03-01  Kelvin Nilsen  <kelvin@gcc.gnu.org>
 
 	PR target/79395
